[project]
name = "dynavoice"
version = "1.0.0"
description = "Dynamensions Voice Engine — hybrid TTS, RVC, OpenVoice, and real-time voice conversion."
authors = [
    { name = "Ryan", email = "dev@dynamensions.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "gradio",
    "numpy",
    "soundfile",
    "librosa",
    "pydub",
    "torch",
    "torchaudio"
]

[project.urls]
Homepage = "https://github.com/dynamensions/DynaVoice"
Repository = "https://github.com/dynamensions/DynaVoice"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]
include = ["pipelines*", "ui*", "utils*", "server*"]
