[metadata]
name = dynavoice
version = 1.0.0
description = Dynamensions Voice Engine — hybrid TTS, RVC, OpenVoice, and real-time voice conversion.
author = Ryan
author_email = dev@dynamensions.com
url = https://github.com/dynamensions/DynaVoice
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = app
python_requires = >=3.10
install_requires =
    fastapi
    uvicorn
    gradio
    numpy
    soundfile
    librosa
    pydub
    torch
    torchaudio

[options.packages.find]
where = app
include =
    pipelines*
    ui*
    utils*
    server*

[options.extras_require]
dev =
    black
    isort
    pytest
